--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "workspaces": [
     "src/TNT3_backend",
     "src/TNT3_frontend"
-  ]
+  ],
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.1"
+  }
 }
