--- a/package.json
+++ b/package.json
@@ -17,7 +17,19 @@
     "src/TNT3_frontend"
   ],
   "dependencies": {
+    "@dfinity/authentication": "^0.14.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "react-bootstrap": "^2.10.5",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.27.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.13"
   }
 }
